2002 Nov 11
    
    * ObjectiveC module: added selectorsContainingString:

2002 Nov 5

    * Added MyLanguage as empty example language bundle

2002 Sep 17
    
    * Patch from Jeff Teunissen <deek@d2dc.net> with various bug-fixes
    * Added .cvsignore files
    
2002 Sep 15

    * Version 0.6.1

2002 Sep 15

    * Modules/AppKit/AppKitConstants.list: commented out undefined constants
    
2002 Sep 7

    * Modules/AppKit/AppKitInfo.plist: added NSSound class
    
2002 Aug 27

    * Source/*.m: Cleanup to remove compiler warnings.
    
2002 Jun 18

    * STScript: new class (from AppTalk)
    * STScriptsManager: new class (from AppTalk)
    * Modules/StepTalk: new module

2002 Jun 14

    * Modules/ObjectiveC: new module
    
2002 Jun 10

    * NSObject+additions: removed -className as it was added to the base library

2002 Jun 9

    * Version 0.6.0 released

2002 Jun 8

    * STEnvironmentDescription: added module amd finder list; little code 
    cleanup; removed descriptionFromFile: and initFromFile: methods
    * STEnvironment: removed methods
        environmentWithDescriptionFromFile:
        environmentWithDescriptionFromDictionary:
        initWithDescriptionFromFile: 
        init
        addAllClasses
        addObject:withName:
        allObjectNames
    new methods:
        environmentWithDescription:
        initWithDescription:
    renamed methods:
        defaultObjectPool to objectDictionary
        registerObjectFinderWithName: to registerObjectFinderNamed:
    load modules and finders from description at initialization;
    * STExecutor: reflect STEnvironment changes        
    * stexec: removed loading of the Foundation module as this is handled
    by the STEnvironment
    * Environments: new descriptions AppKit.stenv and Distributed.stenv
    
2002 Jun 7

    * STEnvironmentDescription: added abstract class 'All' that is root
    class for all classes
    * Foundation-operators.stenv: add symbolic selector '->' to all classes

2002 Jun 6
